[tool.poetry]
name = "stedders-demo"
version = "0.1.0"
description = "Some example code/dashboards to demonstrate working experience"
authors = ["Luke Stedman <luke@stedman.email>"]
readme = "README.md"
packages = [
    { include="stedders/one"}
]

[tool.poetry.dependencies]
python = "^3.11"
inflect = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.4.0"
black = "^23.9.1"
ruff = "^0.0.290"
perflint = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=stedders --cov-report term --cov-report xml:reports/coverage.xml --cov-report html:reports/html --cov-fail-under=80"
testpaths = [
    "tests",
]